# lms_gui

./: CMakeLists.txt  conanfile.py
include/: data_collector.h  graph.h  logging.h  main_window.h  overview.h  profiling.h  qt_visulation.h
src/: data_collector.cpp  graph.cpp  logging.cpp  main.cpp  main_window.cpp  overview.cpp  profiling.cpp  qt_visulation.cpp
